@@ -234,7 +234,7 @@ with a dry run, you can test the speed of path computations, which are still per
 /** \brief Writes the free RAM to output, if it is less then at the last test. Should always return
 values >500 for safety, since it doesn't catch every function call. Nice to tweak cache
 usage or for seraching for memory induced errors. Switch it off for production, it costs execution time. */
-#define DEBUG_FREE_MEMORY                             0                                         // 1 = on, 0 = off
+#define DEBUG_FREE_MEMORY                             1                                         // 1 = on, 0 = off
 
 #if DEBUG_FREE_MEMORY
  #define DEBUG_MEMORY                        Commands::checkFreeMemory();
