@@ -5,6 +5,8 @@ V RF.01.41.05.Mod alpha (2018-03-12)
 - corrected unit calculation in void Printer::MemoryPosition()
 - rise of LOW_TICKS_PER_MOVE to 500k (It might not have a big effect but maybe on some parts)
 - removed some old TODOs on which I am now absolut sure how to handle them.
+- dont show "setTemperatureForExtruder(): cant set Temp for Extr." when it is set to 0°C.
+- switched MOVE_CACHE back to 17 for testing reasons.
 
 V RF.01.41.04.Mod alpha (2018-03-12) 
 - added FEATURE_DEBUG_MOVE_CACHE_TIMING to debug movecache fill while printing.
